@@ -359,11 +359,14 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Reworking of the notify-code
 		* Optimized and simplified adding of shared files to the listctrl
 		* Remove partially copied files when a UTF8_CopyFile fails.
-		* Drop the file/directory permission settings, use umask instead
+		* Drop the file/directory permission settings, use umask
+		  instead.
 
 	ycjhi:
 		* fix for OSX aMule-CVS-20071115 fails in loading libixml and
 		  libupnp.
+		* fix for aMule-CVS-20071115 doesn't update server.met on
+		  startup.
 
 	Special Thanks to:
 		* FreeToGo for implementing the first version of IP2Country on
